Fixing webpack.config

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>AAA</title>
+    <title>Focus Gestor de Orçamentos</title>
   </head>
   <body>
-    aaaasdas
+
   </body>
 </html>
