Removed jQuery from Webpack

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,3 +1,4 @@
-body {
-  background-color: black;
-}
+@import './../_partials/config';
+@import './../_partials/base';
+@import './../_partials/layout';
+@import './../_partials/modules';
