Finished Main Header and made it responsive

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,3 +2,4 @@
 @import './../_partials/base';
 @import './../_partials/layout';
 @import './../_partials/modules';
+@import './../_partials/states';
