--- a/src/assets/_partials/_base.scss
+++ b/src/assets/_partials/_base.scss
@@ -1,10 +1,12 @@
+// Base
 body {
     &:before {
       content: '';
       position: absolute;
       width: 100%;
       height: 100%;
-      background-image: url('http://phandroid.s3.amazonaws.com/wp-content/uploads/2015/02/galaxy-wallpaper-4.jpg');
+      // background-image: url('http://phandroid.s3.amazonaws.com/wp-content/uploads/2015/02/galaxy-wallpaper-4.jpg');
+      background-image: url('https://chrismartinphotography.files.wordpress.com/2013/01/2012-landscapes-c2a9-christopher-martin-93441.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       // opacity: 0.4;
