--- a/src/assets/_partials/_config.scss
+++ b/src/assets/_partials/_config.scss
@@ -3,3 +3,5 @@
 // Variables
 $background-color: #1734c1;
 //              Or #33109c
+$primary-color: #f1f1f1;
+$secondary-color: rgba(0, 0, 0, .5);
